--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <!--   *********************  HEADING START *********************   --> 
     
     <div class="heading">
-      <h3 class='name'>James / Zheng <br> Khoa / Nguyen <br> Lucas / Wang <br> Yousuf / </h3> 
-      <h3 class=pId>PID: A16280081 <br> PID: A16180920 <br> PID: A169843 <br> </h3>
+      <h3 class='name'>James / Zheng <br> Khoa / Nguyen <br> Lucas / Wang <br> Yusuf / Amanullah</h3> 
+      <h3 class=pId>PID: A16280081 <br> PID: A16180920 <br> PID: A16984315 <br> PID: A17022875</h3>
             
       <h1>Team BigMoneyRobot Website</h1> <!-- h1 is heading 1 -->
     </div>
