--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             Challenge #7: Explain why you need to calibrate your photoresistor values. 
             What problem does this help solve and what problems do you still see coming from your photoresistors?  
             <br><br>
-            &emsp; Answer here...
+            &emsp; We needed to calibrate the photoresistor values to account for fluctuations and variations in expected photoresistor reading values, which may be caused by interfering external light, photoresistor misalignment, etc. One problem we stil faced even after calibration is external light interference affecting photoresistor values, which we were able to fix by adjusting our custom light shield.
           </p> <!-- p is paragraph -->
         </div> <!-- This is the end of div interactive -->
       </div> <!-- This is the end of div box1 -->
