--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     
     <div class="heading">
       <h3 class='name'>James / Zheng <br> Khoa / Nguyen <br> Lucas / Wang <br> Yusuf / Amanullah</h3> 
-      <h3 class=pId>PID: A16280081 <br> PID: A16180920 <br> PID: A16984315 <br> PID: A17022875</h3>
             
       <h1>Team Cheerios Website</h1> <!-- h1 is heading 1 -->
     </div>
@@ -203,7 +202,7 @@
           <p class='box2'>
             Insert a video of your robot in action!
           </p> <!-- p is paragraph -->
-          <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"> </iframe>
+          <iframe width="420" height="315" src="https://www.youtube.com/watch?v=LorprjG8u1s"> </iframe>
             <br>
         </div> <!-- This is the end of div interactive -->
       </div> <!-- This is the end of div box1 -->
