--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <p class='box2'>
             Insert a video of your robot in action!
           </p> <!-- p is paragraph -->
-          <iframe width="420" height="315" src="https://www.youtube.com/watch?v=LorprjG8u1s"> </iframe>
+          <iframe width="420" height="315" src="https://www.youtube.com/embed/LorprjG8u1s"> </iframe>
             <br>
         </div> <!-- This is the end of div interactive -->
       </div> <!-- This is the end of div box1 -->
