--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <section class="main">
       <h2> Objective</h2>
-      <p1>Enter the objective of your lab here ...</p1> 
+      <p1>The objective of lab 4 was to combine the skills learned throughout the course, including Arduino coding, circuit design, 3D modeling and printing, soldering, and input processing, to create a robot that can follow a black line.</p1> 
              
       <br><br>
 <!--   *********************  INTRO END *********************   --> 
