--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
           <p class='box2'>
             What was the best PID values that you used? How well did this track? Any limitations?
             <br><br>
-            &emsp; For the seeding round, we settled on a value of 15 for P, 10 for I, and 10 for D. With these values, we were able to complete 10 laps on the seeding track in 1 minute. Unfortunately, we were only able to successfully test the PID values for the seeding round loop track, and could not succesfuly adjust the values to work with other types of tracks with sharper turns.
+            &emsp;  41, 14, 0 5 For the seeding round, we settled on a value of 15 for P, 10 for I, and 10 for D. With these values, we were able to complete 10 laps on the seeding track in 1 minute. Unfortunately, we were only able to successfully test the PID values for the seeding round loop track, and could not succesfuly adjust the values to work with other types of tracks with sharper turns.
             <br><br><br>
             What does PID stand for?  What is the purpose of the P, the I, and the D?  
             What steps did you take to choose the best values for your robot? 
             Explain this like you would for someone taking this course next year.
             <br><br>
-            &emsp; P stands for proportional control, and it scales the error value by a proportional gain factor, which gives a turn rate that allows the robot to align itself back on the line after calculating an error. I is the integral, which gives us the cumulative sum previous of errors and can help us correct for small but consistent errors. D, the derivative, checks for the change between errors and whether the the error is increasing or decreasing, which helps us account for sharp and sudden turns. We settled on the values of 15:10:10 because we figured out through experimentation that we didn't need high PID values to navigate the relatively simple and straightforward loop track. Therfore, we went with low PID values and a high speed to allow us to get the fastest possible results, although we will need to change this approach with other types of tracks.
+            &emsp;P stands for proportional control, and it scales the error value by a proportional gain factor, which gives a turn rate that allows the robot to align itself back on the line after calculating an error. I is the integral, which gives us the cumulative sum previous of errors and can help us correct for small but consistent errors. D, the derivative, checks for the change between errors and whether the the error is increasing or decreasing, which helps us account for sharp and sudden turns. We settled on the values of 15:10:10 because we figured out through experimentation that we didn't need high PID values to navigate the relatively simple and straightforward loop track. Therfore, we went with low PID values and a high speed to allow us to get the fastest possible results, although we will need to change this approach with other types of tracks.
           </p> <!-- p is paragraph -->
         </div> <!-- This is the end of div interactive -->
       </div> <!-- This is the end of div box1 -->
