--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
           </p> <!-- p is paragraph -->
           <iframe width="420" height="315" src="https://www.youtube.com/embed/LorprjG8u1s"> </iframe>
             <br>
+        </div>
         <div class='box1'>
           <br>
           <p class='box2'>
